--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -1,33 +1,86 @@
 <!DOCTYPE html>
 <head>
-<title>Berkshire Hathaway INC.</title>
+<link rel="stylesheet" type="text/css" href="/Users/jasmeetchatrath/Documents/Devbootcamp/phase-0/week-3/my-berkshire-stylesheet.css" />
+  <title>Berkshire Hathaway INC.</title>
 </head>
 <body>
-    <p>BERKSHIRE HATHAWAY INC. 3555 Farnam Street Omaha, NE 68131 Official Home Page </p>
-    <hr>
-    <ul>
-      <li><a href= "#">A Message From Warren E. Buffett</a></li>
-      <li><a href= "#">News Releases</a>Updated November 6, 2015</li>
-      <li><a href= "#">Annual & Interim Reports </a>Updated November 6, 2015</li>
-      <li><a href= "#">Warren Buffett's Letters to Berkshire Shareholders</a>Updated February 28, 2015</li>
-      <li><a href= "#">Link to SEC Filings</a></li>
-      <li><a href= "#">Charlie Munger's Letters to Wesco Shareholders</a></li>
-      <li><a href= "#">Corporate Governance </a></li>
-      <li><a href= "#">Annual Meeting Information </a></li>
-      <li><a href= "#">Links to Berkshire Subsidiary Companies </a></li>
-      <li><a href= "#">Comparative Rights and Relative Prices of Class A and B Stock</a>Updated January 20, 2010</li>
-      <li><a href= "#">Owner's Manual</a>To view the Owner's Manual you may use Adobe Acrobat Reader software.  Click <a href="#">here</a> to download.  Update March 1, 2014</li>
-      <li><a href= "#">Order Berkshire Activewear On-Line</a></li>
-      <li><a href= "#">Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a>Update August 30, 2012</li>
-    </ul>
-    <p><a href="#"><img src="/Users/jasmeetchatrath/Documents/Devbootcamp/phase-0/week-2/imgs/geicoimg.gif"/></a>
-      FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY
+    <header>
+      <p><span>B</span>ERKSHIRE <span>H</span>ATHAWAY INC.</p> <p>3555 Farnam Street</p><p>Omaha, NE 68131</p> <p>Official Home Page </p>
+    </header>
+<div class="line"></div>
+<section>
+  <table>
+    <tbody>
+      <tr>
+          <td>
+            <ul>
+                <li><a href="#">A Message From Warren E. Buffet</a>
+                </li>
+
+                <li><a href="#">Annual & Interim Reports</a><p>Updated November 6, 2015</p>
+            </li>
+
+            <li><a href="#">Special Letters From Warren & Charlie RE: Past, Present and Future</a>
+            </li>
+
+            <li><a href="#">Link to SEC Filings</a>
+            </li>
+
+            <li><a href="#">Links to Berkshire Subsidiary Companies</a>
+            </li>
+
+            <li><a href="#">Corporate Governance</a>
+            </li>
+
+            <li><a href="#">Owner's Manual</a>
+            </li>
+
+            <li><a href="#">Letters from Warren E. Buffet Regarding Pledges to Make Gifts of <br>Berkshire Stock</a>
+            </li>
+            </ul>
+          </td>
+            <td>
+              <ul>
+                <li><a href="#">New Releases</a><p>Updated November 6, 2015</p>
+                </li>
+
+                <li><a href="#">Warren Buffett's Letters to Berkshire Shareholders</a><p>Updated February 28, 2015</p>
+            </li>
+
+            <li><a href="#">Charlie Munger's Letters to Wesco Shareholders</a>
+            </li>
+
+            <li><a href="#">Annual Meeting Information</a></li>
+
+            <li><a href="#">Celebrating 50 Years of a Profitable Partnership</a><p>(A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.)</p>
+            </li>
+
+            <li><a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a>
+            </li>
+
+            <li><a href="#">Berkshire Activewear</a>
+            </li>
+              </ul>
+            </td>
+          </tr>
+    </table>
+ </section>
+<div class="line"></div>
+ <aside>
+    <p><a href="#"><img src="/Users/jasmeetchatrath/Documents/Devbootcamp/phase-0/week-2/imgs/geicoimg.gif"/></a><br>
+      FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY<br>
       <a href =#>WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY
     </p>
+  </aside>
+  <div class="line"></div>
+  <footer>
     <p>If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at <a href= "#">berkshire@berkshirehathaway.com</a>. However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
+  <div class="line"></div>
     <p><a href= "#">Legal Disclaimer</a></p>
-    <p>Copyright @copy 1978-2015 Berkshire Hathaway Inc.</p>
+    <p>Copyright @copy 1978-2015 <b>Berkshire Hathaway Inc.</b></p>
+  </footer>
   </body>
+</heml>
 <!--
 - What was it like to translate your previous learning with HTML into an actual site?
 It felt relatively straightforward.  I felt comfortable with most tags in HTML so this challenge went pretty smoothly.
