Add CSS to file

--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -267,6 +267,6 @@
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- Yes, I did feel more confident with CSS positioning after this session.  Our guide was great at answering any questions we had which was great.  He provided some examples as well which really solidified our knowledge. I felt comfortable with the learning competencies but will continue to practice CSS! -->
   </body>
 </html>
